Add environment input to build workflow and update push
The build-project workflow now accepts an 'environment' input and several optional macOS signing and notarization secrets. The push workflow is updated to pass the 'production' environment to the build workflow and removes the redundant environment specification from the create-release job.

--- a/.github/workflows/build-project.yaml
+++ b/.github/workflows/build-project.yaml
@@ -1,6 +1,23 @@
 name: Build Project
 on:
   workflow_call:
+    inputs:
+      environment:
+        required: true
+        type: string
+    secrets:
+      MACOS_NOTARIZATION_PASSWORD:
+        required: false
+      MACOS_NOTARIZATION_USERNAME:
+        required: false
+      MACOS_SIGNING_APPLICATION_IDENTITY:
+        required: false
+      MACOS_SIGNING_CERT:
+        required: false
+      MACOS_SIGNING_CERT_PASSWORD:
+        required: false
+      MACOS_SIGNING_INSTALLER_IDENTITY:
+        required: false
     outputs:
       pluginName:
         description: Project name detected by parsing build spec file
