Rename workflow input from release to production
Updated GitHub Actions workflows to use 'production' instead of 'release' as the input parameter. Adjusted references in build-project.yaml, pr-pull.yaml, and push.yaml for consistency.

--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -25,7 +25,7 @@ jobs:
     permissions:
       contents: read
     with:
-      environment: production
+      production: true
 
   create-release:
     name: Create Release 🛫
