--- a/.github/workflows/build-project.yaml
+++ b/.github/workflows/build-project.yaml
@@ -2,7 +2,7 @@ name: Build Project
 on:
   workflow_call:
     inputs:
-      release:
+      production:
         required: false
         type: boolean
         default: false
