Refactor plugin context load/unload and update linking
Renamed main_plugin_context_load/unload to main_plugin_context_module_load/unload for clarity and consistency. Updated CMakeLists.txt to explicitly link OBS::libobs. Cleaned up MainPluginContext method definitions and formatting for improved readability.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,7 @@ target_sources(${CMAKE_PROJECT_NAME}_impl PRIVATE src/MainPluginContext.cpp)
 target_link_libraries(${CMAKE_PROJECT_NAME}_impl PRIVATE plugin-support)
 
 target_sources(${CMAKE_PROJECT_NAME} PRIVATE src/plugin-main.c)
-target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE ${CMAKE_PROJECT_NAME}_impl)
+target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE OBS::libobs ${CMAKE_PROJECT_NAME}_impl)
 
 set_target_properties_plugin(${CMAKE_PROJECT_NAME} PROPERTIES OUTPUT_NAME ${_name})
 
