Add GTest-based unit test for MainPluginContext
Introduces a test suite using GTest for MainPluginContext, including CMake integration and a sample test. Updates .gitignore to allow the tests directory, modifies vcpkg.json to only depend on gtest, and adjusts build scripts and CMake configuration to support testing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ option(ENABLE_QT "Use Qt functionality" OFF)
 include(compilerconfig)
 include(defaults)
 include(helpers)
+include(install-vcpkg)
 
 add_library(${CMAKE_PROJECT_NAME} MODULE)
 add_library(${CMAKE_PROJECT_NAME}_impl STATIC)
@@ -45,4 +46,6 @@ set_target_properties_plugin(${CMAKE_PROJECT_NAME} PROPERTIES OUTPUT_NAME ${_nam
 
 if(BUILD_TESTING)
   enable_testing()
+  find_package(GTest CONFIG REQUIRED)
+  add_subdirectory(tests)
 endif()
