--- a/.github/workflows/my-testing.yaml
+++ b/.github/workflows/my-testing.yaml
@@ -136,6 +136,7 @@ jobs:
           sudo apt update
           sudo apt-get install -y --no-install-recommends \
             libgles2-mesa-dev \
+            obs-studio \
             qt6-base-dev \
             libqt6svg6-dev \
             qt6-base-private-dev \
