Update test and CI: install ccache, revise GetName test
Adds a step to install ccache in the GitHub Actions workflow for improved build caching. Updates the MainPluginContextTest::GetName test to instantiate MainPluginContext instead of calling main_plugin_context_get_name directly.

--- a/.github/workflows/my-testing.yaml
+++ b/.github/workflows/my-testing.yaml
@@ -31,6 +31,9 @@ jobs:
       VCPKG_BINARY_SOURCES: "clear;files,${{ github.workspace }}/vcpkg-cache,readwrite"
 
     steps:
+      - name: "Install dependencies"
+        run: "brew install ccache"
+
       - name: "Checkout"
         uses: "actions/checkout@v5"
 
