Add ONNX models and CoreML conversion script
Added ONNX models and a Python script for converting to CoreML. Updated CMake and test configuration to require OpenCV and link dnn modules. Removed protobuf overlay port files and adjusted vcpkg.json dependencies.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,8 @@ if(ENABLE_QT)
   )
 endif()
 
+find_package(OpenCV CONFIG REQUIRED core imgproc imgcodecs)
+
 target_sources(${CMAKE_PROJECT_NAME} PRIVATE src/MainPluginContext.cpp src/plugin-main.c)
 
 set_target_properties_plugin(${CMAKE_PROJECT_NAME} PROPERTIES OUTPUT_NAME ${_name})
