--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,4 @@
 include(GoogleTest)
 add_executable(Stub_test Stub_test.cpp)
-target_link_libraries(Stub_test PRIVATE GTest::gtest_main)
+target_link_libraries(Stub_test PRIVATE GTest::gtest_main opencv_core opencv_imgproc opencv_imgcodecs opencv_dnn)
 gtest_discover_tests(Stub_test DISCOVERY_MODE PRE_TEST)
