Reformat CMakeLists and fix indentation in Stub_test.cpp
Reformatted the target_link_libraries call in tests/CMakeLists.txt for better readability. Fixed indentation in the Stub test case in Stub_test.cpp to use tabs instead of spaces.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,7 @@
 include(GoogleTest)
 add_executable(Stub_test Stub_test.cpp)
-target_link_libraries(Stub_test PRIVATE GTest::gtest_main opencv_core opencv_imgproc opencv_imgcodecs opencv_dnn)
+target_link_libraries(
+  Stub_test
+  PRIVATE GTest::gtest_main opencv_core opencv_imgproc opencv_imgcodecs opencv_dnn
+)
 gtest_discover_tests(Stub_test DISCOVERY_MODE PRE_TEST)
