--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,4 @@
 include(GoogleTest)
-add_executable(Stub_test Stub_test.cpp)
-target_link_libraries(Stub_test PRIVATE GTest::gtest_main)
+add_executable(Stub_test Stub_test.mm)
+target_link_libraries(Stub_test PRIVATE opencv_core opencv_imgproc opencv_imgcodecs GTest::gtest_main)
 gtest_discover_tests(Stub_test DISCOVERY_MODE PRE_TEST)
