Update test to fix type casting and remove GUI display
Cast height and width to int in PixelBufferToMat to avoid type issues. Remove imshow and waitKey calls from StubTest to prevent GUI windows from opening during tests. Also update CMakeLists.txt to link required Apple frameworks for Vision and CoreGraphics.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,4 @@
 include(GoogleTest)
 add_executable(Stub_test Stub_test.mm)
-target_link_libraries(Stub_test PRIVATE opencv_core opencv_imgproc opencv_imgcodecs GTest::gtest_main)
+target_link_libraries(Stub_test PRIVATE opencv_core opencv_imgproc opencv_imgcodecs "-framework CoreGraphics" "-framework Vision" "-framework CoreVideo" GTest::gtest_main)
 gtest_discover_tests(Stub_test DISCOVERY_MODE PRE_TEST)
