--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,37 +13,32 @@ include(helpers)
 include(install-vcpkg)
 
 add_library(${CMAKE_PROJECT_NAME} MODULE)
-add_library(${CMAKE_PROJECT_NAME}_impl STATIC)
-target_include_directories(${CMAKE_PROJECT_NAME}_impl PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src OBS::libobs)
 
 find_package(libobs REQUIRED)
-target_link_libraries(${CMAKE_PROJECT_NAME}_impl PRIVATE OBS::libobs)
+target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE OBS::libobs)
 
 if(ENABLE_FRONTEND_API)
   find_package(obs-frontend-api REQUIRED)
-  target_link_libraries(${CMAKE_PROJECT_NAME}_impl PRIVATE OBS::obs-frontend-api)
+  target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE OBS::obs-frontend-api)
 endif()
 
 if(ENABLE_QT)
   find_package(Qt6 COMPONENTS Widgets Core)
-  target_link_libraries(${CMAKE_PROJECT_NAME}_impl PRIVATE Qt6::Core Qt6::Widgets)
+  target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE Qt6::Core Qt6::Widgets)
   target_compile_options(
-    ${CMAKE_PROJECT_NAME}_impl
+    ${CMAKE_PROJECT_NAME}
     PRIVATE $<$<C_COMPILER_ID:Clang,AppleClang>:-Wno-quoted-include-in-framework-header -Wno-comma>
   )
   set_target_properties(
-    ${CMAKE_PROJECT_NAME}_impl
+    ${CMAKE_PROJECT_NAME}
     PROPERTIES AUTOMOC ON AUTOUIC ON AUTORCC ON
   )
 endif()
 
 find_package(OpenCV CONFIG REQUIRED core imgproc imgcodecs)
 
-target_sources(${CMAKE_PROJECT_NAME}_impl PRIVATE src/MainPluginContext.cpp)
-target_link_libraries(${CMAKE_PROJECT_NAME}_impl PUBLIC OBS::libobs plugin-support)
-
-target_sources(${CMAKE_PROJECT_NAME} PRIVATE src/plugin-main.c)
-target_link_libraries(${CMAKE_PROJECT_NAME} PUBLIC ${CMAKE_PROJECT_NAME}_impl)
+target_sources(${CMAKE_PROJECT_NAME} PRIVATE src/MainPluginContext.cpp src/plugin-main.c)
+target_link_libraries(${CMAKE_PROJECT_NAME} PUBLIC OBS::libobs plugin-support)
 
 set_target_properties_plugin(${CMAKE_PROJECT_NAME} PROPERTIES OUTPUT_NAME ${_name})
 
