--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ endif()
 find_package(OpenCV CONFIG REQUIRED core imgproc imgcodecs)
 
 target_sources(${CMAKE_PROJECT_NAME} PRIVATE src/MainPluginContext.cpp src/plugin-main.c)
-target_link_libraries(${CMAKE_PROJECT_NAME} PUBLIC OBS::libobs plugin-support)
+target_link_libraries(${CMAKE_PROJECT_NAME} PUBLIC OBS::libobs plugin-support opencv_core opencv_imgproc opencv_imgcodecs)
 
 set_target_properties_plugin(${CMAKE_PROJECT_NAME} PROPERTIES OUTPUT_NAME ${_name})
 
