Add ncnn as a dependency to project and tests
Integrated the ncnn library into the main project and test targets in CMake. Updated vcpkg.json to include ncnn as a dependency, enabling use of ncnn in both the main build and test suite.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,11 +36,12 @@ if(ENABLE_QT)
 endif()
 
 find_package(OpenCV CONFIG REQUIRED core imgproc imgcodecs)
+find_package(ncnn CONFIG REQUIRED)
 
 target_sources(${CMAKE_PROJECT_NAME} PRIVATE src/MainPluginContext.cpp src/plugin-main.c)
 target_link_libraries(
   ${CMAKE_PROJECT_NAME}
-  PUBLIC OBS::libobs plugin-support opencv_core opencv_imgproc opencv_imgcodecs
+  PUBLIC OBS::libobs plugin-support opencv_core opencv_imgproc opencv_imgcodecs ncnn
 )
 
 set_target_properties_plugin(${CMAKE_PROJECT_NAME} PROPERTIES OUTPUT_NAME ${_name})
