--- a/.github/workflows/my-issue-triage.yaml
+++ b/.github/workflows/my-issue-triage.yaml
@@ -27,7 +27,7 @@ jobs:
         id: "gemini_triage"
         uses: "google-github-actions/run-gemini-cli@b8dcd5ff197981cd002d61650bb95b5af3d2b856"
         with:
-          gemini_api_key: "${{ secrets.GEMINI_API_KEY }}""
+          gemini_api_key: "${{ secrets.GEMINI_API_KEY }}"
           # This is the prompt (instruction) for Gemini
           prompt: |
             You are an expert triage engineer for a GitHub repository.
