--- a/.github/workflows/my-testing.yaml
+++ b/.github/workflows/my-testing.yaml
@@ -54,7 +54,7 @@ jobs:
           dotnet-version: '8.0.x'
 
       - name: "Setup NuGet Credentials"
-        shell: pwsh # Windows/macOS/Ubuntuで共通して使えるPowerShellを指定
+        shell: "pwsh"
         run: |
           dotnet nuget add source "https://nuget.pkg.github.com/kaito-tokyo/index.json" --name "GitHub" --username "kaito-tokyo" --password "${{ secrets.GITHUB_TOKEN }}" --store-password-in-clear-text
       
