--- a/.github/workflows/my-testing.yaml
+++ b/.github/workflows/my-testing.yaml
@@ -57,7 +57,12 @@ jobs:
         shell: "pwsh"
         run: |
           dotnet nuget add source "https://nuget.pkg.github.com/kaito-tokyo/index.json" --name "GitHub" --username "kaito-tokyo" --password "${{ secrets.GITHUB_TOKEN }}" --store-password-in-clear-text
-      
+
+      - name: "Install dependencies on macOS"
+        if: runner.os == 'macOS'
+        run: |
+          brew install mono
+
       - name: "Install dependencies on Ubuntu"
         if: runner.os == 'Linux'
         run: |
