--- a/.github/workflows/my-testing.yaml
+++ b/.github/workflows/my-testing.yaml
@@ -45,12 +45,6 @@ jobs:
       VCPKG_FEATURE_FLAGS: "credentialprovider"
 
     steps:
-      - name: "Disable man-db update"
-        if: runner.os == 'Linux'
-        run: |
-          echo "man-db man-db/auto-update boolean false" | sudo debconf-set-selections
-          sudo apt-get remove --purge -y man-db
-
       - name: "Checkout"
         uses: "actions/checkout@v5"
 
@@ -72,6 +66,9 @@ jobs:
       - name: "Install dependencies on Ubuntu"
         if: runner.os == 'Linux'
         run: |
+          echo "man-db man-db/auto-update boolean false" | sudo debconf-set-selections
+          sudo apt-get remove --purge -y man-db
+          sudo add-apt-repository -y ppa:obsproject/obs-studio
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends \
             libgles2-mesa-dev \
