--- a/.github/workflows/my-testing.yaml
+++ b/.github/workflows/my-testing.yaml
@@ -53,11 +53,6 @@ jobs:
         with:
           dotnet-version: '8.0.x'
 
-      - name: "Setup NuGet Credentials"
-        shell: "pwsh"
-        run: |
-          dotnet nuget add source "https://nuget.pkg.github.com/kaito-tokyo/index.json" --name "GitHub" --username "kaito-tokyo" --password "${{ secrets.GITHUB_TOKEN }}" --store-password-in-clear-text
-
       - name: "Install dependencies on macOS"
         if: runner.os == 'macOS'
         run: |
@@ -82,6 +77,29 @@ jobs:
             ninja-build \
             pkg-config \
             mono-devel
+
+      - name: "Setup NuGet Credentials on Windows"
+        if: runner.os == 'Windows'
+        shell: "pwsh"
+        run: |
+          dotnet nuget add source "https://nuget.pkg.github.com/kaito-tokyo/index.json" \
+            --name "GitHub" --username "kaito-tokyo" \
+            --password "${{ secrets.GITHUB_TOKEN }}" \
+            --store-password-in-clear-text
+
+      - name: "Setup NuGet Credentials on macOS/Linux"
+        if: runner.os != 'Windows'
+        run: |
+          mono "$($VCPKG_INSTALLATION_ROOT)/vcpkg fetch nuget)" \
+            sources add \
+            -Source "https://nuget.pkg.github.com/kaito-tokyo/index.json" \
+            -StorePasswordInClearText \
+            -Name "GitHub" \
+            -UserName "kaito-tokyo" \
+            -Password "$GITHUB_TOKEN"
+          mono "$($VCPKG_INSTALLATION_ROOT)/vcpkg fetch nuget)" \
+            setapikey "$GITHUB_TOKEN" \
+            -Source "https://nuget.pkg.github.com/kaito-tokyo/index.json"
 
       - name: "Configure"
         run: "cmake --preset ${{ matrix.preset }}"
