--- a/.github/workflows/my-testing.yaml
+++ b/.github/workflows/my-testing.yaml
@@ -112,7 +112,7 @@ jobs:
       - name: "Setup NuGet Credentials on macOS / Linux"
         if: runner.os != 'Windows'
         run: |
-          mono "$($VCPKG_ROOT/vcpkg fetch nuget)" \
+          mono "$($VCPKG_ROOT/vcpkg fetch nuget | tail -n1)" \
             sources add \
             -Source "https://nuget.pkg.github.com/kaito-tokyo/index.json" \
             -StorePasswordInClearText \
