--- a/.github/workflows/my-testing.yaml
+++ b/.github/workflows/my-testing.yaml
@@ -102,10 +102,10 @@ jobs:
 
       - name: "Setup NuGet Credentials on Windows"
         if: runner.os == 'Windows'
-        shell: "pwsh"
         run: |
           dotnet nuget add source "https://nuget.pkg.github.com/kaito-tokyo/index.json" \
-            --name "GitHub" --username "kaito-tokyo" \
+            --name "GitHub" \
+            --username "kaito-tokyo" \
             --password "${{ secrets.GITHUB_TOKEN }}" \
             --store-password-in-clear-text
 
