--- a/.github/workflows/build-project.yaml
+++ b/.github/workflows/build-project.yaml
@@ -115,6 +115,9 @@ jobs:
       - name: Bootstrap vcpkg
         working-directory: ${{ env.VCPKG_ROOT }}
         run: ./bootstrap-vcpkg.sh
+      
+      - name: Install mono
+        run: brew install mono
 
       - name: Set Up Environment 🔧
         id: setup
@@ -234,6 +237,9 @@ jobs:
       - name: Bootstrap vcpkg
         working-directory: ${{ env.VCPKG_ROOT }}
         run: ./bootstrap-vcpkg.sh
+      
+      - name: Install mono
+        run: brew install mono
 
       - name: Set Up Environment 🔧
         id: setup
@@ -354,6 +360,9 @@ jobs:
       - name: Bootstrap vcpkg
         working-directory: ${{ env.VCPKG_ROOT }}
         run: ./bootstrap-vcpkg.sh
+      
+      - name: Install mono
+        run: sudo apt-get -y install mono-devel
 
       - name: Set Up Environment 🔧
         id: setup
@@ -440,7 +449,6 @@ jobs:
         shell: "pwsh"
         run: |
           .\bootstrap-vcpkg.bat
-
 
       - name: Set Up Environment 🔧
         id: setup
