--- a/.github/workflows/build-project.yaml
+++ b/.github/workflows/build-project.yaml
@@ -98,7 +98,7 @@ jobs:
         shell: zsh --no-rcs --errexit --pipefail {0}
     if: ${{ inputs.production == false }}
     env:
-      VCPKG_BINARY_SOURCES: "clear;nuget,https://nuget.pkg.github.com/kaito-tokyo/index.json,readwrite"
+      VCPKG_BINARY_SOURCES: "clear;nuget,https://nuget.pkg.github.com/kaito-tokyo/index.json,read"
       VCPKG_ROOT: "${{ github.workspace }}/vcpkg"
     steps:
       - uses: actions/checkout@v4
@@ -118,6 +118,15 @@ jobs:
       
       - name: Install mono
         run: brew install mono
+
+      - name: Setup NuGet Credentials
+        run: |
+          mono "$($VCPKG_ROOT/vcpkg fetch nuget | tail -n1)" sources add \
+            -Source "https://nuget.pkg.github.com/kaito-tokyo/index.json" \
+            -StorePasswordInClearText \
+            -Name "GitHub" \
+            -UserName "kaito-tokyo" \
+            -Password "${{ secrets.GITHUB_TOKEN }}"
 
       - name: Set Up Environment 🔧
         id: setup
@@ -219,7 +228,7 @@ jobs:
         shell: zsh --no-rcs --errexit --pipefail {0}
     if: ${{ inputs.production == true }}
     env:
-      VCPKG_BINARY_SOURCES: "clear;nuget,https://nuget.pkg.github.com/kaito-tokyo/index.json,readwrite"
+      VCPKG_BINARY_SOURCES: "clear;nuget,https://nuget.pkg.github.com/kaito-tokyo/index.json,read"
       VCPKG_ROOT: "${{ github.workspace }}/vcpkg"
     environment: production
     steps:
@@ -240,6 +249,15 @@ jobs:
       
       - name: Install mono
         run: brew install mono
+
+      - name: Setup NuGet Credentials
+        run: |
+          mono "$($VCPKG_ROOT/vcpkg fetch nuget | tail -n1)" sources add \
+            -Source "https://nuget.pkg.github.com/kaito-tokyo/index.json" \
+            -StorePasswordInClearText \
+            -Name "GitHub" \
+            -UserName "kaito-tokyo" \
+            -Password "${{ secrets.GITHUB_TOKEN }}"
 
       - name: Set Up Environment 🔧
         id: setup
@@ -343,7 +361,7 @@ jobs:
       run:
         shell: bash
     env:
-      VCPKG_BINARY_SOURCES: "clear;nuget,https://nuget.pkg.github.com/kaito-tokyo/index.json,readwrite"
+      VCPKG_BINARY_SOURCES: "clear;nuget,https://nuget.pkg.github.com/kaito-tokyo/index.json,read"
       VCPKG_ROOT: "${{ github.workspace }}/vcpkg"
     steps:
       - uses: actions/checkout@v4
@@ -363,6 +381,15 @@ jobs:
       
       - name: Install mono
         run: sudo apt-get -y install mono-devel
+
+      - name: Setup NuGet Credentials
+        run: |
+          mono "$($VCPKG_ROOT/vcpkg fetch nuget | tail -n1)" sources add \
+            -Source "https://nuget.pkg.github.com/kaito-tokyo/index.json" \
+            -StorePasswordInClearText \
+            -Name "GitHub" \
+            -UserName "kaito-tokyo" \
+            -Password "${{ secrets.GITHUB_TOKEN }}"
 
       - name: Set Up Environment 🔧
         id: setup
@@ -430,7 +457,7 @@ jobs:
       run:
         shell: pwsh
     env:
-      VCPKG_BINARY_SOURCES: "clear;nuget,https://nuget.pkg.github.com/kaito-tokyo/index.json,readwrite"
+      VCPKG_BINARY_SOURCES: "clear;nuget,https://nuget.pkg.github.com/kaito-tokyo/index.json,read"
       VCPKG_ROOT: "${{ github.workspace }}/vcpkg"
     steps:
       - uses: actions/checkout@v4
@@ -449,6 +476,18 @@ jobs:
         shell: "pwsh"
         run: |
           .\bootstrap-vcpkg.bat
+
+      - name: "Setup NuGet Credentials"
+        shell: pwsh
+        run: |
+          $NUGET_EXE_PATH = & "${{ env.VCPKG_ROOT }}/vcpkg" fetch nuget | Select-Object -Last 1
+          
+          & $NUGET_EXE_PATH sources add `
+            -Source "https://nuget.pkg.github.com/kaito-tokyo/index.json" `
+            -StorePasswordInClearText `
+            -Name "GitHub" `
+            -UserName "kaito-tokyo" `
+            -Password "${{ secrets.GITHUB_TOKEN }}"
 
       - name: Set Up Environment 🔧
         id: setup
